styles/Home.module.css
/* ... */
.mobcaseStudyItemsContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 50px;
}
.mobBlogPFenix {
  display: flex;
  flex-direction: column;
  margin-bottom: 20px;

}
.mobBlogPFenix b{
  color: #374151;
  padding-left: 10%;
  font-size: 18px;
}
.mobBlogP {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 20px;
}

.mobBlogPFenix img,.mobBlogP img {
  width: 300px;
  padding-top: 20px;
}

.mobBlogPFenix img {
  padding-left: 10%;
  padding-bottom: 20px;

}

.mobBlogPFenix h2, .mobBlogP h2 {
  text-align: center;
  font-weight: 400;
  font-size: 28px;
  line-height: 150%;
  /* or 42px */

  text-align: center;
  letter-spacing: 0.01em;

  color: #374151;

  transform: matrix(1, 0, 0, 1, 0, 0);
  margin-bottom: 0;
}

.mobBlogPFenix h3, .mobBlogP h3 {
  text-align: center;
  font-weight: 400;
  font-size: 20px;
  line-height: 150%;
  /* or 33px */

  text-align: center;
  letter-spacing: 0.01em;

  color: #2FAC3A;

  transform: matrix(1, 0, 0, 1, 0, 0);
  margin-top: 0;
  margin-bottom: 0;
}

.mobBlogPFenix p, .mobBlogP p {
  padding-left: 10%;
  padding-right: 10%;
  font-weight: 400;
  font-size: 16px;
  line-height: 150%;
  /* or 24px */

  letter-spacing: 0.01em;

  color: #374151;

  transform: matrix(1, 0, 0, 1, 0, 0);
}

.mobcaseStudyItems {
  display: flex;
  flex-direction: column;
}

.mobcaseStudyItems a {
  text-decoration: none;
}

.underline {
  border: 1px solid #DCDCDC;
  ;
  margin-top: 20px;
}

.caseStudyMain {
  height: 80%;
  /* background: rebeccapurple; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* align-items: center; */
}

.StudyItemsContainer {
  margin-left: 10%;
  margin-right: 50%;
}

.caseStudyMain h1 {
  font-weight: 300;
  color: #374151;
}

.blogBody {
  background-image: radial-gradient(rgba(185, 184, 184, 0.525) 1px, transparent 0);
  background-size: 30px 30px;
}

.blogContainer {
  margin-left: 5%;
  margin-right: 5%;
  /* margin-bottom: 50px; */
}

.blogHeader {
  display: flex;
}

.blogLogo {
  width: 50%;
  padding-top: 50px;
}

.blogLogo img {
  width: 241px;
}

.blogNav {
  padding-top: 50px;
  display: flex;
  width: 50%;
  justify-content: center;
  margin-left: 10%;
}

.blogNavItems {
  width: 600px;
  display: flex;
  justify-content: space-between;
}

.blogNavItem a {
  text-decoration: none;
  color: #374151;
  font-weight: 400;
}

.blogNavItem a:hover {
  color: #37BE43;
}

.blogNavItem a.blogNavH {
  color: #37BE43;
  text-decoration: underline;
  text-decoration-color: #37BE43;
  text-underline-offset: 5px;
}

.blogBanner {
  margin-top: 30px;
  width: 100%;
  height: 392px;
  background: #374151;
  border-radius: 8px;
  display: flex;
}

.blogBreadCrum {
  width: 50%;
}

.blogAnim {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 50%;
}

.blogCaption {
  height: 300px;
  display: flex;
  align-items: center;
}

.blogCaption h1 {
  text-decoration: underline;
  text-underline-offset: 10px;
  text-decoration-color: #37BE43;
  font-weight: 200;
  font-size: 38px;
  line-height: 56px;
  color: #FFFFFF;
}



.blogBreadCrum a {
  color: #888F99;
  text-decoration: none;
}

.blogBreadCrum {
  margin-left: 20px;
  padding-top: 20px;
}

.BlogP {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.BlogPfenix p, .BlogP p {
  font-weight: 400;
  font-size: 16px;
  line-height: 150%;
  /* or 24px */

  letter-spacing: 0.01em;

  color: #374151;

  transform: matrix(1, 0, 0, 1, 0, 0);
}

.BlogPfenix h2, .BlogP h2 {
  font-weight: 400;
  font-size: 28px;
  line-height: 150%;
  /* or 42px */
  margin-top: 10px;
  margin-bottom: 0;
  letter-spacing: 0.01em;
  margin-bottom: 50px;

  color: #374151;

  transform: matrix(1, 0, 0, 1, 0, 0);

}

.BlogPfenix h3, .BlogP h3{
  margin-top: 10px;
  color: #37BE43;
  font-weight: 600;
}

.BlogPfenix span, .BlogP h3 span{
  margin-top: 10px;
  color: #374151;
  font-weight: 600;
}

.BlogP img{
  width: 100%;
}

.BlogPfenix img {
  width: 50%;
  max-width: 700px;
  margin-left: 25%;
  margin-bottom: 20px;
}

.BlogP h2 span {
  color: #37BE43;
  font-weight: 400;
  font-size: 22px;
  line-height: 150%;
  /* or 33px */

  letter-spacing: 0.01em;

  color: #2FAC3A;
}

.BlogPfenix b {
  color: #374151;
  font-size: 20px;
}



.blogImage {
  display: flex;
  width: 100%;
  justify-content: space-around;
}

.blogImage img {
  width: 250px;
}

.blogFooter {
  display: flex;
}

.blogSocila {
  display: flex;
  width: 50%;
  padding-top: 100px;
  justify-content: end;
}

.blogCopyR {
  width: 50%;
  padding-top: 100px;
  font-weight: 400;
  font-size: 14px;
  line-height: 19px;
  /* identical to box height */


  color: #888F99;
}

.mobBrands {
  padding-left: 5%;
  padding-right: 5%;
  margin-bottom: 50px;
}

.mobBrands h2 {
  font-weight: 400;
  font-size: 28px;
  line-height: 35px;
  /* or 125% */


  color: #374151;
}

.mobBrands h3 {
  font-weight: 400;
  font-size: 20px;
  line-height: 27px;
  /* identical to box height */
  color: #374151;
  margin-top: 0;
  margin-bottom: 0;
}

.mobBrands p {
  font-weight: 400;
  font-size: 16px;
  line-height: 150%;
  /* or 24px */

  letter-spacing: 0.01em;

  color: #374151;

  transform: matrix(1, 0, 0, 1, 0, 0);
}

.mobBrandImageRow {
  display: flex;
  justify-content: space-around;
  align-content: space-around;
  padding-bottom: 18px;
}

.mobBrandImage {
  width: 150px;
  height: 82px;

  background: #FFFFFF;
  box-shadow: -2px 1px 14px 3px rgba(145, 158, 171, 0.2);
  border-radius: 6px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 8px;
}

.brand {
  display: flex;
  padding-top: 30px;
  padding-bottom: 30px;
  width: 100%;
}

.brandLeft {
  width: 30%;
}

.brandLeft h3 {
  font-weight: 400;
  font-size: 28px;
  line-height: 36px;
  /* or 86% */

  letter-spacing: 0.01em;

  color: #374151;

  transform: matrix(1, 0, 0, 1, 0, 0);

}
/* ... */

